# finite-mono

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT-MAP.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  justfile
devfinity/: Cargo.toml  justfile
devfinity/src/: lib.rs  main.rs  process.rs  stack.rs  topology.rs  vars.rs  workos_fixture.rs
devfinity/tests/: cli.rs  stack_smoke.rs
finite-agentd/: Cargo.toml  README.md
finite-agentd/src/: config.rs  connections.rs  daemon.rs  ledger.rs  lib.rs  main.rs  supervisor.rs  transport.rs
finite-auth/crates/finite-auth-core/: Cargo.toml
finite-auth/crates/finite-auth-core/src/: error.rs  frostr.rs  http.rs  lib.rs  nip05.rs  session.rs
finite-auth/crates/finite-auth-store/: Cargo.toml
finite-auth/crates/finite-auth-store/src/: lib.rs  schema.rs
finite-brain/crates/finite-brain-app/: Cargo.toml
finite-brain/crates/finite-brain-app/src/: main.rs
finite-brain/crates/finite-brain-cli/: Cargo.toml
finite-brain/crates/finite-brain-cli/src/: admin.rs  args.rs  clock.rs  embedding_provider.rs  environment.rs  error.rs  http.rs  identity_authority.rs  lib.rs  main.rs  models.rs  output.rs  search.rs  semantic_index.rs  signer.rs  state.rs  sync_engine.rs  wiki.rs  working_tree_security.rs
finite-brain/crates/finite-brain-cli/tests/: fbrain_process_acceptance.rs
finite-brain/crates/finite-brain-core/: Cargo.toml
finite-brain/crates/finite-brain-core/src/: lib.rs  portability.rs
finite-brain/crates/finite-brain-server/: Cargo.toml  build.rs
finite-brain/crates/finite-brain-server/src/: contracts.rs  lib.rs  object_records.rs  product-client.css  product-client.html  product-client.js  product-client.test.js  protected_routes.rs  responses.rs  smoke-ui.css  smoke-ui.html  smoke-ui.js
finite-brain/crates/finite-brain-store/: Cargo.toml
finite-brain/crates/finite-brain-store/src/: agent_access.rs  brains.rs  folder_access.rs  folder_deletion.rs  lib.rs  links.rs  loading.rs  personal_agents.rs  schema.rs  shared_folders.rs  sync_records.rs  vaults.rs
finite-identity/: CLI-CONVENTIONS.md  CONTEXT.md  Cargo.toml  README.md  SPEC.md
finite-identity/.github/workflows/: ci.yml
finite-identity/docs/: identity-authority.md
finite-identity/docs/adr/: 0001-immutable-vip-email-bindings-in-v1.md  0002-identity-owns-principal-resolution.md  0003-resolve-principal-links-at-authorization-time.md  0004-identity-authority-with-short-lived-resolution-caches.md  0005-non-custodial-local-identity-keys.md  0006-identity-authority-serves-nip05-endpoint-in-v1.md  0007-vip-email-binding-requires-email-token-and-nip98.md  0008-opaque-one-time-email-challenges.md  0009-products-consume-identity-over-http.md  0010-products-store-grants-as-entered.md  0011-v1-grantees-are-email-npub-and-finite-vip-nip05.md  0012-mail-delivery-is-an-adapter.md  0013-product-clis-wrap-identity-client-flows.md  0014-v1-operator-actions-are-inspect-and-disable.md  0015-user-and-agent-nostr-identities-are-separate.md  0016-email-access-is-product-scoped-delegation.md
finite-identity/src/: authority.rs  client.rs  error.rs  hex.rs  identity.rs  lib.rs  nip98.rs  npub.rs  nsec.rs  paths.rs
finite-identity/tests/: authority.rs  contract.rs
finite-nostr/: AGENTS.md  CONTEXT.md  Cargo.toml  README.md
finite-nostr/.github/workflows/: ci.yml
finite-nostr/docs/adr/: 0001-use-rust-nostr-protocol-crate.md
finite-nostr/docs/agents/: domain.md  issue-tracker.md
finite-nostr/src/: auth.rs  error.rs  event.rs  identity.rs  lib.rs  nip05.rs  nip44.rs  nip59.rs
finitechat/crates/finitechat-blob/: Cargo.toml
finitechat/crates/finitechat-blob/src/: lib.rs
finitechat/crates/finitechat-cli/: Cargo.toml
finitechat/crates/finitechat-cli/src/: app.rs  auth.rs  hermes.rs  lib.rs  main.rs
finitechat/crates/finitechat-cli/tests/: hermes_flow.rs  perf_bridge.rs
finitechat/crates/finitechat-client/: Cargo.toml
finitechat/crates/finitechat-client/src/: lib.rs
finitechat/crates/finitechat-client/tests/: client_state.rs  perf_baseline.rs
finitechat/crates/finitechat-core/: Cargo.toml
finitechat/crates/finitechat-core/src/: device_link.rs  lib.rs
finitechat/crates/finitechat-core/tests/: electron_device_parity.rs  shared_identity.rs
finitechat/crates/finitechat-daemon/: Cargo.toml
finitechat/crates/finitechat-daemon/src/: device_link.rs  lib.rs  main.rs
finitechat/crates/finitechat-daemon/tests/: http.rs  process.rs
finitechat/crates/finitechat-delivery/: Cargo.toml
finitechat/crates/finitechat-delivery/src/: lib.rs
finitechat/crates/finitechat-hermes/: Cargo.toml
finitechat/crates/finitechat-hermes/src/: lib.rs
finitechat/crates/finitechat-hosted-device/: Cargo.toml
finitechat/crates/finitechat-hosted-device/src/: lib.rs  main.rs
finitechat/crates/finitechat-hosted-device/tests/: http.rs
finitechat/crates/finitechat-http/: Cargo.toml
finitechat/crates/finitechat-http/src/: lib.rs
finitechat/crates/finitechat-mls/: Cargo.toml
finitechat/crates/finitechat-mls/src/: lib.rs
finitechat/crates/finitechat-proto/: Cargo.toml
finitechat/crates/finitechat-proto/src/: invite.rs  lib.rs  nostr.rs  runtime.rs
finitechat/crates/finitechat-rmp/: Cargo.toml  README.md
finitechat/crates/finitechat-rmp/src/: bindings.rs  cli.rs  devices.rs  doctor.rs  init.rs  main.rs  product_harness.rs  product_store.rs  run.rs  test_runner.rs
finitechat/crates/finitechat-server/: Cargo.toml  build.rs
finitechat/crates/finitechat-server/src/: lib.rs  main.rs  push.rs  serve.rs
finitechat/crates/finitechat-server/tests/: http_conformance.rs  http_persistence.rs  http_routes.rs  perf_baseline.rs
finitecomputer-v2/crates/finite-core/: Cargo.toml
finitecomputer-v2/crates/finite-core/src/: chat.rs  chat_runtime.rs  cluster.rs  control_plane.rs  finite_chat.rs  lib.rs  models.rs  (+3 more)
finitecomputer-v2/crates/finite-private-limiter/: Cargo.toml
finitecomputer-v2/crates/finite-saas-core/: Cargo.toml  PERSISTENCE.md
finitecomputer-v2/crates/finite-saas-local/: Cargo.toml
finitecomputer-v2/crates/finite-saas-runner/: Cargo.toml
(+1169 files in other folders)
