[workspace]
resolver = "2"
members = [
    "devfinity",
    "finite-agentd",
    "finite-brain/crates/finite-brain-app",
    "finite-brain/crates/finite-brain-cli",
    "finite-brain/crates/finite-brain-core",
    "finite-brain/crates/finite-brain-server",
    "finite-brain/crates/finite-brain-store",
    "finite-identity",
    "finite-nostr",
    "finitecomputer-v2/crates/finite-core",
    "finitecomputer-v2/crates/finite-private-limiter",
    "finitecomputer-v2/crates/finite-saas-core",
    "finitecomputer-v2/crates/finite-saas-local",
    "finitecomputer-v2/crates/finite-saas-runner",
    "finitecomputer-v2/crates/finite-specialization-worker",
    "finitechat/crates/finitechat-blob",
    "finitechat/crates/finitechat-cli",
    "finitechat/crates/finitechat-client",
    "finitechat/crates/finitechat-core",
    "finitechat/crates/finitechat-daemon",
    "finitechat/crates/finitechat-delivery",
    "finitechat/crates/finitechat-hermes",
    "finitechat/crates/finitechat-hosted-device",
    "finitechat/crates/finitechat-http",
    "finitechat/crates/finitechat-mls",
    "finitechat/crates/finitechat-proto",
    "finitechat/crates/finitechat-rmp",
    "finitechat/crates/finitechat-server",
    "finitechat/crates/finitechat-transport",
    "finitechat/uniffi-bindgen",
    "finite-sites/crates/finitesites-blob",
    "finite-sites/crates/finitesites-engine",
    "finite-sites/crates/finitesites-proto",
    "finite-sites/crates/finitesites-store",
    "finite-sites/crates/finitesitesd",
    "finite-sites/crates/fsite-cli",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/finitecomputer/finite-mono"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
bech32 = "0.11"
clap = { version = "4", features = ["derive", "env"] }
finite-brain-core = { path = "finite-brain/crates/finite-brain-core" }
finite-brain-server = { path = "finite-brain/crates/finite-brain-server" }
finite-brain-store = { path = "finite-brain/crates/finite-brain-store" }
finite-identity = { path = "finite-identity" }
finite-nostr = { path = "finite-nostr" }
finitechat-delivery = { path = "finitechat/crates/finitechat-delivery" }
finitechat-transport = { path = "finitechat/crates/finitechat-transport" }
flate2 = "1"
fs4 = "0.13"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
getrandom = "0.3"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
http-body-util = "0.1"
hyper = "1"
hypernote-mdx = { git = "https://github.com/futurepaul/hypernote-mdx", rev = "db23b3d72e81389247716c5a59174cc4f4d55a34", version = "0.3.0" }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
openmls = { version = "0.8.1", default-features = false }
openmls_basic_credential = "0.5.0"
openmls_memory_storage = { version = "0.5.0", features = ["extensions-draft-08"] }
openmls_rust_crypto = "0.5.1"
nostr = { version = "0.45.0-alpha.2", features = ["nip44", "nip59", "nip98", "os-rng"] }
pulldown-cmark = "0.13"
qrcode = { version = "0.14", default-features = false }
reqwest = { version = "=0.12.27", default-features = false, features = ["blocking", "http2", "json", "rustls-tls-webpki-roots"] }
rusqlite = { version = "0.37", features = ["bundled"] }
secp256k1 = { version = "0.29.1", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "parsing"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tar = "0.4"
uniffi = "0.31"
ureq = { version = "2.10", features = ["json"] }
walkdir = "2"
zip = { version = "4.6.1", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
