[package]
edition.workspace = true
license.workspace = true
name = "devfinity"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[[bin]]
name = "devfinity"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
ureq = { workspace = true }
