[package]
edition.workspace = true
license.workspace = true
name = "devfinity"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[[bin]]
name = "devfinity"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
finite-saas-core = { path = "../finitecomputer-v2/crates/finite-saas-core" }
finitechat-server = { path = "../finitechat/crates/finitechat-server" }
finitesitesd = { path = "../finite-sites/crates/finitesitesd" }
tokio = { workspace = true }

[dev-dependencies]
ureq = { workspace = true }
