[package]
edition.workspace = true
license.workspace = true
name = "devfinity"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[[bin]]
name = "devfinity"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
getrandom = { workspace = true }
jsonwebtoken = "9.3"
rand = "0.8"
rsa = { version = "0.9", features = ["pem"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
ureq = { workspace = true }
