[package]
name = "finite-agentd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "finite_agentd"
path = "src/lib.rs"

[[bin]]
name = "finite-agentd"
path = "src/main.rs"

[dependencies]
clap.workspace = true
finitechat-proto = { path = "../finitechat/crates/finitechat-proto" }
futures-util.workspace = true
reqwest = { workspace = true, features = ["stream"] }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "process", "sync"] }

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true

[lints]
workspace = true
