[package]
name = "finite-auth-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Finite auth domain types and Nostr validation policy."

[lib]
path = "src/lib.rs"

[dependencies]
finite-nostr.workspace = true
nostr.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
