[package]
name = "finite-auth-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Finite auth SQLite store and transaction boundary."

[lib]
path = "src/lib.rs"

[dependencies]
finite-auth-core.workspace = true
finite-nostr.workspace = true
rusqlite.workspace = true
serde_json.workspace = true

[dev-dependencies]
nostr.workspace = true
tempfile.workspace = true

[lints]
workspace = true
