[package]
name = "finite-brain-core"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FiniteBrain Portable v1 core domain and validation logic."

[lib]
path = "src/lib.rs"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
base64 = "0.22.1"
finite-nostr.workspace = true
nostr = { version = "0.45.0-alpha.2", features = ["os-rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
unicode-normalization = "0.1.25"

[lints]
workspace = true
