[package]
name = "finite-brain-server"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FiniteBrain HTTP server and API surface."

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.7", features = ["json", "tokio", "http1"] }
base64 = "0.22.1"
finite-brain-core = { path = "../finite-brain-core" }
finite-brain-store = { path = "../finite-brain-store" }
finite-nostr.workspace = true
nostr = { version = "0.45.0-alpha.2", features = ["nip98", "os-rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting"] }
ureq = "2.12.1"

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
tower = { version = "0.5.2", features = ["util"] }

[lints]
workspace = true
