[package]
name = "finitechat-blob"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
finitechat-proto = { path = "../finitechat-proto" }
openmls.workspace = true
openmls_rust_crypto.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
