[package]
name = "finitechat-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
finitechat-transport.workspace = true
finitechat-http = { path = "../finitechat-http" }
finitechat-mls = { path = "../finitechat-mls" }
finitechat-proto = { path = "../finitechat-proto" }
openmls.workspace = true
openmls_basic_credential.workspace = true
openmls_memory_storage.workspace = true
openmls_rust_crypto.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
finitechat-delivery.workspace = true

[dev-dependencies]
axum.workspace = true
finitechat-server = { path = "../finitechat-server" }
tempfile.workspace = true
tokio.workspace = true
tower.workspace = true
