[package]
name = "finitechat-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "finitechatd"
path = "src/main.rs"

[dependencies]
axum.workspace = true
clap.workspace = true
finitechat-core = { path = "../finitechat-core" }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
finitechat-server = { path = "../finitechat-server" }
http-body-util.workspace = true
reqwest.workspace = true
tempfile.workspace = true
tower.workspace = true
