[package]
name = "finitechat-delivery"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
finitechat-transport = { path = "../finitechat-transport" }
hex.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
