[package]
name = "finitechat-hermes"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
finitechat-proto = { path = "../finitechat-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
