[package]
name = "finitechat-hosted-device"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "finitechat-hosted-device"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["multipart"] }
clap.workspace = true
finite-identity.workspace = true
finitechat-core = { path = "../finitechat-core" }
finitechat-http = { path = "../finitechat-http" }
finitechat-proto = { path = "../finitechat-proto" }
futures-util.workspace = true
getrandom.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
finitechat-server = { path = "../finitechat-server" }
http-body-util.workspace = true
tempfile.workspace = true
tower.workspace = true
