[package]
name = "finitechat-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
finitechat-transport.workspace = true
finitechat-proto = { path = "../finitechat-proto" }
serde.workspace = true
serde_json.workspace = true
finitechat-delivery.workspace = true
