[package]
name = "finitechat-rmp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "finitechat-rmp"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
finitechat-core = { path = "../finitechat-core" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
walkdir.workspace = true
