[package]
name = "finitechat-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "finitechat-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
base64.workspace = true
finitechat-blob = { path = "../finitechat-blob" }
finitechat-transport.workspace = true
finitechat-http = { path = "../finitechat-http" }
finitechat-proto = { path = "../finitechat-proto" }
futures-util.workspace = true
p256 = "0.13.2"
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
finitechat-delivery.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
