[package]
name = "finite-saas-local"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
finite-private-limiter = { path = "../finite-private-limiter" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "time"] }

[dev-dependencies]
finite-saas-core = { path = "../finite-saas-core" }
serde_json = "1.0"
