[package]
name = "finite-saas-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
finite-saas-core = { path = "../finite-saas-core" }
hex = "0.4"
httpdate = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
ureq = { version = "2.12", features = ["json"] }

[dev-dependencies]
tempfile.workspace = true
